--- a/website/startup.html
+++ b/website/startup.html
@@ -34,6 +34,7 @@
           <li><a href="/index.html">Overview</a></li>
           <li><a href="/performance.html">Performance</a></li>
           <li class="active"><a href="/startup.html">Startup</a></li>
+          <li><a href="/bridge.html">Bridge</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/about.html">About</a></li>
